--- a/package.json
+++ b/package.json
@@ -76,9 +76,10 @@
 		]
 	},
 	"dependencies": {
-		"bootstrap": "^5.1.1",
+		"bootstrap": "^5.1.3",
 		"prop-types": "^15.6.1",
 		"react": "^16.8.4",
+		"react-bootstrap": "^2.0.0-rc.1",
 		"react-dom": "^16.8.4",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "^5.2.0"
